--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
                 </div>
                 <div class="faq-qa">
-                    <h3>Domains of Hackathon</h3>
+                    <h3> What is the theme or domains of the hackathon?</h3>
 
                 
                     
